--- a/css/main.css
+++ b/css/main.css
@@ -252,13 +252,15 @@ right:16px;
 .unic-card {
   margin-top:0px;
   margin-bottom:8px;
+}
 
+.opacity-transition {
   opacity: 0;
-  -webkit-transition: opacity 0.8s ease-in;
-  -moz-transition: opacity 0.8s ease-in;
-  -ms-transition: opacity 0.8s ease-in;
-  -o-transition: opacity 0.8s ease-in;
-  transition: opacity 0.8s ease-in;
+  -webkit-transition: opacity 0.5s ease-in;
+  -moz-transition: opacity 0.5s ease-in;
+  -ms-transition: opacity 0.5s ease-in;
+  -o-transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in;
 }
 
 .something  {
