--- a/template/map.html
+++ b/template/map.html
@@ -6,7 +6,8 @@
 		</div>
 	</div>
 </nav>
-<div class="container" >
+<div class="container container-span" >
+<!-- 	<div ng-hide="loading"></div> -->
     <div class="map">
 	    <ul style="display:none;"> 
 	        <li><strong ng-bind="eventDetected"></strong></li>
